<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="price_in_dollar">$0</string>
    <string name="add">add</string>
    <string name="subt">subt</string>
    <string name="enter_your_name_please">Enter your name please!</string>
    <string name="chocolate">chocolate</string>
    <string name="cream">cream</string>
    <string name="email">send by email</string>
    <string name="_1">1</string>
    <string name="orderDetails">Order details</string>
    <string name="send_by_email">send by email</string>
    <string name="toppings">Toppings</string>


    <!--  used in main activity  at the String displayMessage  -->
    <string name="name">Name: </string>
    <string name="WithCream">with cream: </string>
    <string name="Withchocolate">with chocolate: </string>
    <string name="total">Total is $: </string>
    <string name="thankYou">Thank you !!</string>

</resources>
