<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="16dp"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantity_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/price_text_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/price_in_dollar"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="italic" />


    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="makeOrder"
        android:text="@string/order"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonSubt"
        android:layout_above="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/quantity_text"
        android:onClick="SubtractCoffee"
        android:text="@string/subt" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_above="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/quantity_text"
        android:onClick="AddCoffee"
        android:text="@string/add" />


</RelativeLayout>